--- a/.github/workflows/push-to-n1sc.yaml
+++ b/.github/workflows/push-to-n1sc.yaml
@@ -45,31 +45,16 @@ jobs:
           echo "DEFAULT_CONF_CONFIG_FILE_SIZE=`wc -c < app-nyc-02/etc/nginx/conf.d/default.conf`" >> $GITHUB_ENV
           echo "SSL_CERT=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.crt | base64 -w 0`" >> $GITHUB_ENV
           echo "SSL_KEY=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.key | base64 -w 0`" >> $GITHUB_ENV
-
-      - name: Check for "Hello" in a string
-        if: contains('Hello World', 'xxxxxxx')
-        run: echo "The string contains 'Hello'!"
-        
-      - name: Do some preliminary checks before proceeding
+  
+      - name: list_instances
         id: ddd
         run: |
           my_response=$(curl --location 'https://${{ vars.N1SC_HOSTNAME }}/api/nginx/one/namespaces/default/instances'  -H 'Authorization: Bearer APIToken ${{ secrets.XC_BEARER_TOKEN }}')
           echo "my_response=$my_response" >> $GITHUB_OUTPUT
-          echo "---------------------------------------------------------------------------------------"
-          echo "---------------------------------------------------------------------------------------"
-          echo "---------------------------------------------------------------------------------------"
-        
-      - name: blah
-        if: contains(${{ steps.ddd.outputs.my_response }}, 'zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz')
-        run: echo "The string contains 'Hello'!"
- 
-      - name: blah
-        if: contains(fromJSON(${{ steps.ddd.outputs.my_response }}), 'zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz')
-        run: echo "The string contains 'Hello'!"
-
-      - name: Check if auth worked
-        if: contains(${{ steps.ddd.outputs.my_response }}, 'nvalid')
-        run: echo "***Auth failed - suggestion check your XC Bearer Token has not expired, and you are using the right token for your Tenant ***"; exit 1
+      
+      #- name: Check if auth worked
+      #  if: contains(${{ steps.ddd.outputs.my_response }}, 'nvalid')
+      #  run: echo "***Auth failed - suggestion check your XC Bearer Token has not expired, and you are using the right token for your Tenant ***"; exit 1
           
       - name: PATCH the instance config
         run: |
