--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -6,14 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
-        
-    - name: Run Python script with arguments
-      run: python your_script_args.py "Argument 1" "Another Argument"
-
     - name: Set misc environment variables 
       run: |
         echo "XC_BEARER_TOKEN=`echo -n "${{ secrets.XC_BEARER_TOKEN }}`" >> $GITHUB_ENV
@@ -31,3 +23,13 @@ jobs:
         echo "DEFAULT_CONF_CONFIG_FILE_SIZE=`wc -c < app-nyc-02/etc/nginx/conf.d/default.conf`" >> $GITHUB_ENV
         echo "SSL_CERT=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.crt | base64 -w 0`" >> $GITHUB_ENV
         echo "SSL_KEY=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.key | base64 -w 0`" >> $GITHUB_ENV
+
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
+        
+    - name: Run Python script with arguments
+      run: python gitops_n1c.py --N1SC_HOSTNAME=${{ vars.N1SC_HOSTNAME }} --NAMESPACE=${{ vars.NAMESPACE}} default --N1SC_INSTANCE==${{ vars.N1SC_INSTANCE }} --XC_BEARER_TOKEN==${{XC_BEARER_TOKEN}} --NGINX_CONF_CONFIG_FILE==${{ env.NGINX_CONF_CONFIG_FILE }}
+      
