--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -1,6 +1,9 @@
 name: Python Script with Command-Line Arguments
 on: [push]
 
+# Allows you to run this workflow manually from the Actions tab
+workflow_dispatch:
+
 jobs:
   run-python-script:
     runs-on: ubuntu-latest
