--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.x'
-
+      run: pip install -r requirements.txt
 
         
     - name: Run Python script with arguments
