--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -38,8 +38,11 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.x'
-      run: pip install -r requirements.txt
-
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
         
     - name: Run Python script with arguments
       run: python gitops-n1c.py --n1c_hostname=${{ vars.N1SC_HOSTNAME }} --n1c_namespace=${{ vars.NAMESPACE}} --nginx-nginx_instance_id=${{ vars.N1SC_INSTANCE }} --xc_bearer_token=${{ env.XC_BEARER_TOKEN}} --nginx_config_file=${{ env.NGINX_CONF_CONFIG_FILE }}
