--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -25,8 +25,8 @@ jobs:
           
     - name: Set environment variable for base64 encoded config files
       run: |
-        echo "NGINX_CONF_CONFIG_FILE=`echo \# Modified by https://github.com/bwolmarans/GitOps-NGINX-One $(date) branch: ${{ env.N1SC_BRANCH }} commit hash: ${{ env.N1SC_COMMIT_HASH }} | cat - app-nyc-02/etc/nginx/nginx.conf | base64 -w 0`" >> $GITHUB_ENV
-        echo "NGINX_CONF_CONFIG_FILE_SIZE=`wc -c < app-nyc-02/etc/nginx/nginx.conf`" >> $GITHUB_ENV
+        echo "NGINX_CONFIG_FILE=`echo \# Modified by https://github.com/bwolmarans/GitOps-NGINX-One $(date) branch: ${{ env.N1SC_BRANCH }} commit hash: ${{ env.N1SC_COMMIT_HASH }} | cat - app-nyc-02/etc/nginx/nginx.conf | base64 -w 0`" >> $GITHUB_ENV
+        echo "NGINX_CONFIG_FILE_SIZE=`wc -c < app-nyc-02/etc/nginx/nginx.conf`" >> $GITHUB_ENV
         echo "MIME_TYPES_CONFIG_FILE=`cat app-nyc-02/etc/nginx/mime.types | base64 -w 0`" >> $GITHUB_ENV
         echo "DEFAULT_CONF_CONFIG_FILE=`cat app-nyc-02/etc/nginx/conf.d/default.conf | base64 -w 0`" >> $GITHUB_ENV
         echo "DEFAULT_CONF_CONFIG_FILE_SIZE=`wc -c < app-nyc-02/etc/nginx/conf.d/default.conf`" >> $GITHUB_ENV
