--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -17,22 +17,14 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set misc environment variables 
       run: |
-        echo "XC_BEARER_TOKEN=`echo -n "${{ secrets.XC_BEARER_TOKEN }}`" >> $GITHUB_ENV
-        echo "N1SC_TIMESTAMP=`date -u +"%Y-%m-%dT%H:%M:%SZ"`" >> $GITHUB_ENV
-        #echo "N1SC_COMMIT_HASH=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
-        echo "N1SC_COMMIT_HASH=$(git show --pretty=format:"%H %s" -s HEAD)" >> $GITHUB_ENV
-        echo "N1SC_BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+        echo "MY_COMMIT_HASH=$(git show --pretty=format:"%H %s" -s HEAD)" >> $GITHUB_ENV
+        echo "MY_BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
           
     - name: Set environment variable for base64 encoded config files
       run: |
-        echo "NGINX_CONFIG_FILE=`echo \# Modified by https://github.com/bwolmarans/GitOps-NGINX-One $(date) branch: ${{ env.N1SC_BRANCH }} commit hash: ${{ env.N1SC_COMMIT_HASH }} | cat - app-nyc-02/etc/nginx/nginx.conf | base64 -w 0`" >> $GITHUB_ENV
-        echo "NGINX_CONFIG_FILE_SIZE=`wc -c < app-nyc-02/etc/nginx/nginx.conf`" >> $GITHUB_ENV
+        echo "NGINX_CONFIG_FILE=`echo \# Modified by https://github.com/bwolmarans/GitOps-NGINX-One $(date) branch: ${{ env.MY_BRANCH }} commit hash: ${{ env.MY_COMMIT_HASH }} | cat - app-nyc-02/etc/nginx/nginx.conf | base64 -w 0`" >> $GITHUB_ENV
         echo "MIME_TYPES_CONFIG_FILE=`cat app-nyc-02/etc/nginx/mime.types | base64 -w 0`" >> $GITHUB_ENV
-        echo "DEFAULT_CONF_CONFIG_FILE=`cat app-nyc-02/etc/nginx/conf.d/default.conf | base64 -w 0`" >> $GITHUB_ENV
-        echo "DEFAULT_CONF_CONFIG_FILE_SIZE=`wc -c < app-nyc-02/etc/nginx/conf.d/default.conf`" >> $GITHUB_ENV
-        echo "SSL_CERT=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.crt | base64 -w 0`" >> $GITHUB_ENV
-        echo "SSL_KEY=`cat app-sfo-01/etc/nginx/ssl/expiring.nginx.com.key | base64 -w 0`" >> $GITHUB_ENV
-
+        
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -45,6 +37,7 @@ jobs:
         pip install -r requirements.txt
         
     - name: Run Python script with arguments
-      run: python gitops-n1c.py --n1c_hostname=${{ vars.N1C_HOSTNAME }} --n1c_namespace=${{ vars.N1C_NAMESPACE}} --nginx_instance_id=${{ vars.N1C_INSTANCE }} --xc_bearer_token=${{ secrets.XC_BEARER_TOKEN }} --nginx_config_file=${{ env.NGINX_CONFIG_FILE }}
+      run: |
+        python gitops-n1c.py --n1c_hostname=${{ vars.N1C_HOSTNAME }} --n1c_namespace=${{ vars.N1C_NAMESPACE}} --nginx_instance_id=${{ vars.N1C_INSTANCE }} --xc_api_token=${{ secrets.XC_API_TOKEN }} --nginx_config_file=${{ env.NGINX_CONFIG_FILE }}
       
 #/gitops-n1c.py nginx-tenant1.staging.volterra.us --xc_bearer_token=u9Uh8k+YZtikEIwMI3BzMamS3uY= --n1c_namespace=default --nginx_instance_id=inst_XZvbO_aYQm-MPmdbK2opVw
