--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -31,12 +31,12 @@ jobs:
       with:
         python-version: '3.x'
     
-    - name: Install dependencies
+    - name: Install PIP requirements
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Run Python script with arguments
+    - name: Run the n1c Python script
       run: |
         python gitops-n1c.py --n1c_hostname=${{ vars.N1C_HOSTNAME }} --n1c_namespace=${{ vars.N1C_NAMESPACE}} --nginx_instance_id=${{ vars.N1C_INSTANCE }} --xc_api_token=${{ secrets.XC_API_TOKEN }} --nginx_config_file=${{ env.NGINX_CONFIG_FILE }}
       
