testing by updating app-nyc-02 locally and pushing

--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -2,7 +2,7 @@ user  nginx;
 
 ########################
 #
-# Demo 7/18/2025  
+# Editing this via VS code on 7/23/2025
 #
 ########################
 
