I've changed app-nyc-02 config

--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -2,7 +2,7 @@ user  nginx;
 
 ########################
 #
-# Editing this via VS code on 7/23/2025
+# U2 is an Irish Band
 #
 ########################
 
