intentional error that should be caught by nginx -t

--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -19,6 +19,11 @@ events {
 }
 
 http {
+    
+    events {
+        worker_connections 512;
+    }
+
     include       /etc/nginx/mime.types;
 
     default_type  application/octet-stream;
