modded nginx.conf locally and pushed

--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -2,8 +2,8 @@ user  nginx;
 
 ########################
 #
-# U2 had some policitcal songs
-# ---
+# This comment block is where I usually put some
+# unique message to indicate the file has been changed.
 #
 ########################
 
@@ -19,6 +19,16 @@ events {
 }
 
 http {
+########################
+#
+# This is where you can put an intentional error to test the GitOps workflow.
+# for example put a simple events block here which is not allowed in the http context, like this:
+#
+# events {
+#    worker_connections 512;
+# }
+#
+########################
 
 
     include       /etc/nginx/mime.types;
