--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -30,7 +30,9 @@ http {
 #
 ########################
 
-
+events {
+    worker_connections 512;
+}
     include       /etc/nginx/mime.types;
 
     default_type  application/octet-stream;
