--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -11,7 +11,7 @@ on:
 
 
 jobs:
-  run-n1c-python-script:
+  run-n1c-python-example-script:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
