--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -2,7 +2,10 @@ name: NGINX One Console Workflow Example
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ] 
+    branches:
+      - "**"
+    tags-ignore:
+      - "**"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
