--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -6,7 +6,8 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+  # Triggers the workflow on pull request events but only for the "main" branch.
+  
 jobs:
   workaround_github_duplicate_actions_bug:
     runs-on: ubuntu-latest
