--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -4,7 +4,7 @@ user  nginx;
 #
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
-#
+# Demo for Dave
 ########################
 
 worker_processes  auto;
@@ -26,7 +26,7 @@ http {
 #
 events {
     worker_connections 512;
-}
+
 #
 ########################
 
