--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -22,7 +22,7 @@ jobs:
   run-n1c-python-example-script:
     needs: workaround_github_duplicate_actions_bug
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+    #if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
