--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -24,9 +24,9 @@ http {
 # This is where you can put an intentional error to test the GitOps workflow.
 # for example put a simple events block here which is not allowed in the http context, like this:
 #
-events {
-    worker_connections 512;
-
+# events {
+#    worker_connections 512;
+# }
 #
 ########################
 
