--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -4,7 +4,7 @@ user  nginx;
 #
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
-# Demo for Dave
+#
 ########################
 
 worker_processes  auto;
@@ -12,13 +12,14 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log notice;
 #pid        /var/run/nginx.pid;
 
-# is this enough connections?
+# ares these enough connections?
 
 events {
     worker_connections 512;
 }
 
 http {
+    
 ########################
 #
 # This is where you can put an intentional error to test the GitOps workflow.
