--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -1,12 +1,16 @@
 name: NGINX One Console Workflow Example
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [main]
 
+# Triggers the workflow on push or pull request events but only for the "main" branch
+on:
+  push:
+    branches:
+      - main
+  concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-  # Triggers the workflow on pull request events but only for the "main" branch...
+  #workflow_dispatch:
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
