--- a/.github/workflows/n1c_config_update_gitops_example.yaml
+++ b/.github/workflows/n1c_config_update_gitops_example.yaml
@@ -1,5 +1,7 @@
 name: NGINX One Console Workflow Example
-
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 # Triggers the workflow on push request events but only for the "main" branch
 on:
   push:
