--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -19,15 +19,15 @@ events {
 }
 
 http {
-    
+
 ########################
 #
 # This is where you can put an intentional error to test the GitOps workflow.
 # for example put a simple events block here which is not allowed in the http context, like this:
 #
-# events {
-#    worker_connections 512;
-# }
+events {
+    worker_connections 512;
+}
 #
 ########################
 
