--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -23,11 +23,14 @@ http {
 ########################
 #
 # This is where you can put an intentional error to test the GitOps workflow.
-# for example put a simple events block here which is not allowed in the http context, like this:
+# for example you can uncomment out the simple events block here and push, which will cause an error
+# because this not allowed in the http context:
 #
-events {
-    worker_connections 512;
-}
+#
+#events {
+#    worker_connections 512;
+#}
+#
 #
 ########################
 
