--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -4,7 +4,7 @@ user  nginx;
 #
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
-#
+# Starbucks, 2023-10-30, 11:00 UTC
 ########################
 
 worker_processes  auto;
