--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -4,7 +4,7 @@ user  nginx;
 #
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
-# Demo for Shouvik
+#
 ########################
 
 worker_processes  auto;
@@ -27,9 +27,9 @@ http {
 # because this not allowed in the http context:
 #
 #
-events {
-    worker_connections 512;
-}
+#events {
+#    worker_connections 512;
+#}
 #
 #
 ########################
