testing the flow

--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -4,6 +4,7 @@ user  nginx;
 #
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
+# some unique message 
 #
 ########################
 
