--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -5,7 +5,7 @@ user  nginx;
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
 #
-# going to add an intentional error   
+# I'm going to fix the error and the publication should succeed.
 #
 ########################
 
@@ -29,9 +29,9 @@ http {
 # because this not allowed in the http context:
 #
 #
-events {
-    worker_connections 512;
-}
+#events {
+#    worker_connections 512;
+#}
 #
 #
 ########################
