--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -5,7 +5,7 @@ user  nginx;
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
 #
-# I'm going to fix the error and the publication should succeed.
+# Demo of GitOps workflow with NGINX configuration.
 #
 ########################
 
