--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -5,6 +5,8 @@ user  nginx;
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
 #
+# Demo for Dangerous Dan.
+#
 ########################
 
 worker_processes  auto;
