--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -5,7 +5,7 @@ user  nginx;
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
 #
-# Demo for Dangerous Dan.
+#
 #
 ########################
 
@@ -14,7 +14,7 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log notice;
 #pid        /var/run/nginx.pid;
 
-# ares these enough connections?
+# are these enough connections?
 
 events {
     worker_connections 512;
