--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -5,7 +5,7 @@ user  nginx;
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
 #
-# This config file is valid but has several recommendations for Optimzation, Best Practices, and Security.
+# This config file is not valid, it will not pass a local test nginx -t
 #
 ########################
 
