--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -29,9 +29,9 @@ http {
 # because this not allowed in the http context:
 #
 #
-#events {
-#    worker_connections 512;
-#}
+events {
+    worker_connections 512;
+}
 #
 #
 ########################
