--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -5,7 +5,6 @@ user  nginx;
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
 #
-# This config file is not valid, it will not pass a local test nginx -t
 #
 ########################
 
@@ -29,9 +28,9 @@ http {
 # because this not allowed in the http context:
 #
 #
-events {
-    worker_connections 512;
-}
+#events {
+#    worker_connections 512;
+#}
 #
 #
 ########################
