a config file that has recommendations but is valid.

--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -5,6 +5,7 @@ user  nginx;
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
 #
+# This config file is valid, but has several recommendations. I am going to save and push it. 
 #
 ########################
 
