not valid config file

--- a/app-nyc-02/etc/nginx/nginx.conf
+++ b/app-nyc-02/etc/nginx/nginx.conf
@@ -5,8 +5,8 @@ user  nginx;
 # This comment block is where I usually put some
 # unique message to indicate the file has been changed.
 #
-# This config file is valid, but has recommendations
-#
+# This config file is not valid, and will fail a local test with `nginx -t`.
+# 
 ########################
 
 worker_processes  auto;
@@ -29,9 +29,9 @@ http {
 # because this not allowed in the http context:
 #
 #
-#events {
-#    worker_connections 512;
-#}
+events {
+    worker_connections 512;
+}
 #
 #
 ########################
